fixed gap

--- a/src/components/Intro/index.css
+++ b/src/components/Intro/index.css
@@ -1,7 +1,7 @@
 .about-container {
   background-color: #222;
   color: #fff;
-  padding: 4px 40px;
+  padding: 10px 30px 25px;
   text-align: center;
 }
 
@@ -42,7 +42,7 @@
 /* DESCRIPTION */
 .about-text {
   max-width: 900px;
-  margin: 0 auto;
+  margin: 0 auto ;
   font-size: 14px;
   line-height: 1.8;
   font-weight: 300;
@@ -57,7 +57,7 @@
 /* ========================= */
 @media (max-width: 1024px) {
   .about-container {
-    padding: 20px 60px 30px;
+    padding: 0px 60px 30px;
   }
 
   .about-images {
@@ -75,9 +75,7 @@
 /* ========================= */
 @media (max-width: 640px) {
   .about-container {
-    padding-top: 0px;
-    padding-bottom: 20px;
-    margin-top: 0;
+    padding: 20px 20px 30px;
   }
 
   .about-images {
@@ -93,7 +91,8 @@
 
   .about-title {
     font-size: 24px;
-  }
+    margin-bottom: 20px;
+}
 
   .about-text {
     font-size: 13px;
